--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div class="container mt-5">
       <%= render "shared/flash_message" %>
-      <div class="row justify-content-center text-center">
+      <div class="row justify-content-center">
         <div class="col-md-6">
           <%= yield %>
         </div>
