--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h2>新規登録</h2>
+<h2 class="text-center">新規登録</h2>
 
 <%= form_with(model: @user, url: signup_path, local: true) do |f| %>
   <%= render "shared/error_messages", object: @user %>
