軽微な修正

--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,4 +1,4 @@
 <p>こんにちは、<%= @user.name %>さん！</p>
 <p>以下のリンクをクリックしてアカウントを有効化してください。</p>
 <%= link_to "アカウントを有効化", edit_account_activation_url(@user.activation_token,
-                                                           email: @user.email)
+                                                           email: @user.email) %>
