--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header card-center">
-    <h2><%= @user.name %>さんのプロフィール</h2>
+    <h2 class="text-center"><%= @user.name %>さんのプロフィール</h2>
   </div>
   <div class="card-body">
     <div class="text-center mb-4">
