--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <%= render "shared/flash_message" %>
+    <%= render "shared/header" %>
     <div class="container mt-5">
       <div class="row justify-content-center">
         <div class="col-md-6">
