ログインページの作成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     </div>
     <p><strong>お名前：</strong> <%= @user.name %></p>
     <p><strong>メールアドレス：</strong> <%= @user.email %></p>
-    <p><strong>自己紹介：</strong> <%= @user.name %></p>
+    <p><strong>自己紹介：</strong></p>
     <p><%= @user.bio.presence || "自己紹介はありません。" %></p>
   <div>
 </div>
